# cribbage-rl

./: README.md  demo.py  pyproject.toml  requirements.txt  run.py  setup.py  setup.sh
src/cribbage_rl/agents/base/: base_agent.py  random_agent.py
src/cribbage_rl/agents/rl/: dqn_agent.py  train_dqn.py
src/cribbage_rl/cribbage_env/core/: cards.py  environment.py  scoring.py
src/cribbage_rl/tests/integration/: test_game_flow.py
src/cribbage_rl/tests/unit/: test_environment.py
src/cribbage_rl/ui/cli/: play_game.py
src/cribbage_rl/ui/streamlit/: app.py
