[tool.poetry]
name = "cribbage-rl"
version = "0.1.0"
description = "A Cribbage environment with Reinforcement Learning agents"
authors = ["OpenHands <openhands@all-hands.dev>"]
packages = [
    { include = "cribbage_rl", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.0"
gymnasium = "^0.29.0"
torch = "^2.0.0"
streamlit = "^1.29.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "run:train_agent"
play = "run:run_streamlit"